--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,24 +21,48 @@ body {
   border-radius: 10px;
   overflow: hidden;
   padding: 77px 55px 33px;
-  h1 {
-    text-align: center;
-  }
+}
+
+h1 {
+  text-align: center;
 }
 
 #message-container {
-  background-color: grey;
+/*background-color: lightblue;*/
+  padding: 10px;
+  border-radius: 10px;
 }
 
 #send-container {
-
+  margin: 2px;
 }
 
 #message-input {
-
+  height: 24px;
+  margin: 5px 3px;
+  width: 75%;
 }
 
 #send-button {
-  height: 20px;
-  width: 30px;
+  height: 30px;
+  width: 20%;
+}
+
+
+.name-input-area {
+  width: 100%;
+  height: 30px;
+}
+
+.label-text { 
+  width: 40%;
+  float: left;
+}
+
+.name-input {
+  height:20px;
+  margin: 0px 10px;
+}
+.connect-button {
+  margin: 0px 5px;
 }
